# ChangeLog for dev-java/jgrapht
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-java/jgrapht/ChangeLog,v 1.5 2010/06/30 15:27:05 phajdan.jr Exp $

  30 Jun 2010; Pawel Hajdan jr <phajdan.jr@gentoo.org> jgrapht-0.7.3.ebuild:
  x86 stable wrt bug #325669

  26 Jun 2010; Christoph Mende <angelos@gentoo.org> jgrapht-0.7.3.ebuild:
  Stable on amd64 wrt bug #325669

  09 May 2010; Petteri Räty <betelgeuse@gentoo.org> jgrapht-0.7.3.ebuild:
  Fix inconsistency in JDK versions that caused the build to fail and
  migrated to EAPI 2. Fixes bug #317813.

  16 Jan 2010; Petteri Räty <betelgeuse@gentoo.org> jgrapht-0.7.3.ebuild:
  Keyword ~x86.

*jgrapht-0.7.3 (25 Jan 2009)

  25 Jan 2009; weaver <weaver@gentoo.org> +metadata.xml,
  +jgrapht-0.7.3.ebuild:
  Import from Java overlay, dependency for dev-java/biojava, thanks to serkan

  22 Jan 2009; Alistair Bush <ali_bush@gentoo.org> ChangeLog:
  Add ChangeLog for QA.
