@@ -1,6 +1,9 @@
 # ChangeLog for dev-java/jgrapht
-# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-java/jgrapht/ChangeLog,v 1.5 2010/06/30 15:27:05 phajdan.jr Exp $
+# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-java/jgrapht/ChangeLog,v 1.6 2011/01/23 17:03:27 xarthisius Exp $
+
+  23 Jan 2011; Kacper Kowalik <xarthisius@gentoo.org> jgrapht-0.7.3.ebuild:
+  Mark ~ppc wrt #301239
 
   30 Jun 2010; Pawel Hajdan jr <phajdan.jr@gentoo.org> jgrapht-0.7.3.ebuild:
   x86 stable wrt bug #325669
